WebCore/xml/XPathStep.cpp
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2005 Frerich Raabe <raabe@kde.org>
- * Copyright (C) 2006, 2009 Apple Inc.
+ * Copyright (C) 2006, 2009 Apple Inc. All rights reserved.
  * Copyright (C) 2007 Alexey Proskuryakov <ap@webkit.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -34,7 +34,6 @@
 #include "Document.h"
 #include "Element.h"
 #include "NamedNodeMap.h"
-#include "XPathNSResolver.h"
 #include "XPathParser.h"
 #include "XPathUtil.h"
 
