LayoutTests/fast/xpath/xpath-test-pre.js
@@ -13,3 +13,35 @@ function checkSnapshot(comment, actual, expected) {
     
     testPassed(comment);
 }
+
+function test(doc, context, expr, expected, nsResolver)
+{
+    try {
+        if (typeof(context) == "string")
+            context = doc.evaluate(context, doc.documentElement, nsResolver, XPathResult.ANY_UNORDERED_NODE_TYPE, null).singleNodeValue;
+        if (typeof(expected) == "object") {
+            var result = doc.evaluate(expr, context, nsResolver, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
+            checkSnapshot(expr,  result, expected);
+        } else {
+            var result = doc.evaluate(expr, context, nsResolver, XPathResult.ANY_TYPE, null);
+            if (typeof(expected) == "number") {
+                if (result.numberValue == expected)
+                    testPassed(expr);
+                else
+                    testFailed(expr + ": expected " + expected + ", actual " + result.numberValue);
+            } else if (typeof(expected) == "string") {
+                if (result.stringValue == expected)
+                    testPassed(expr);
+                else
+                    testFailed(expr + ": expected '" + expected + "', actual '" + result.stringValue + "'");
+            } else if (typeof(expected) == "boolean") {
+                if (result.booleanValue == expected)
+                    testPassed(expr);
+                else
+                    testFailed(expr + ": expected '" + expected + "', actual '" + result.booleanValue + "'");
+            }
+        }
+    } catch (ex) {
+        testFailed(expr + ": raised " + ex);
+    }
+}
